--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-md-8 offset-md-2 to-do-list">
                 <div class="row">
                     <div class="col-12" id="to-do-col">
-                        <template v-for="task in tasks" :key="`task-${index}`">
+                        <template v-for="task in tasks">
                             <div class="to-do-item">
                                 <i class="fa fa-fw fa-trash" style="color: red;" v-on:click="deleteTask(task)"
                                     title="delete task"></i>
