reset counter to 0 on clearAll

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                     },
                     clearAll: function () {
                         this.tasks = [];
+                        this.counter = 0;
                     }
                 }
             });
