--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <body>
     <div class="container" id="app">
-        <h1>To Do List</h1>
+        <h1><i class="fa fa-fw fa-edit"></i> To Do List</h1>
         <div class="row" style="padding: 20px;">
             <div class="col-md-8 offset-md-2 to-do-list">
                 <div class="row">
