--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
                             style="margin-bottom: 8px;"><i class="fa fa-trash"></i> All Tasks</button>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p style="text-align: center;"><i class="fa fa-fw fa-copyright"></i>Copyright 2020
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
